syntax = "proto3";
package endless.stream.v1;
option go_package = "github.com/seanhagen/endless_stream/backend/endless";

import "input.proto";
import "output.proto";

message CreateGame {}

message GameCreated {
  string code = 1;
}

service Game {
  rpc Create(CreateGame) returns (GameCreated) {}
  rpc State(stream Input) returns (stream Output){}
}